--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
         <a class="header__logo" href="#" target="_blank"></a>
         <ul class="header__links">
-            <li><a class="header__lang-link header__lang-link_active" href="#" style="text-decoration: underline;">Ru</a></li>
+            <li><a class="header__lang-link header__lang-link_active" href="#">Ru</a></li>
             <li><a class="header__lang-link" href="#">En</a></li>
         </ul>
     </header>    
@@ -59,7 +59,7 @@
                     <p class="place__url-heading">url</p>
                     <a href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
                   </div>
-                  <img class="place__image" src="../russian-travel/images/place-kosa.jpg" alt="Фото Куршская коса"/>
+                  <img class="place__image" src="./images/place-kosa.jpg" alt="Фото Куршская коса"/>
                   <div class="place__text">
                     <p class="place__paragraph">
                         Здесь, посреди лесов&nbsp;и песчаных дюн, &nbsp;вы сможете увидеть два водных горизонта&nbsp;— спокойного 
@@ -106,6 +106,7 @@
                         <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры 
                             и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.
                         </p>
+                        </div>
                 </li>
                 <li class="place">
                     <h2 class="place__title">Зимний Байкал</h2>
@@ -141,20 +142,20 @@
         </ul>
     </section>
     <section class="cover">
-        <a class="cover__background" href="https://stampsy.com/na-elektrichkakh-do-baikala" alt="Фото ж/д отстойник">
+        <a class="cover__background" href="https://stampsy.com/na-elektrichkakh-do-baikala">
             <h2 class="cover__title">До&nbsp;Байкала «на&nbsp;собаках»</h2>
             <p class="cover__subtitle">По&nbsp;мотивам учебной темы о Транссибе — путешествие от&nbsp;столицы до&nbsp;Байкала на&nbsp;электричках.</p>
         </a>
     </section>
 </main>
 <footer class="footer">
-    <div class="footer__links">
+    <nav class="footer__links">
         <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
         <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
         <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
         <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
         <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
-    </div>
+    </nav>
     <p class="footer__copyright">&copy;2022. Артём Агасаров</p>
 </footer>
 </body>
